<?xml version="1.0"?>
<package format="2">
  <name>slocum_glider</name>
  <version>0.0.1</version>
  <description>The slocum_glider package</description>

  <maintainer email="etimmons@mit.edu">Eric Timmons</maintainer>

  <license>TODO</license>

  <author email="etimmons@mit.edu">Eric Timmons</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>slocum_glider_backseat</exec_depend>
  <exec_depend>slocum_launch</exec_depend>
  <exec_depend>slocum_glider_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
