<?xml version="1.0"?>
<package format="2">
  <name>slocum_glider</name>
  <version>0.2.0</version>
  <description>The slocum_glider package</description>

  <maintainer email="mers-scouts@mit.edu">MIT MERS Scouts Team</maintainer>

  <license>BSD-2</license>

  <author email="etimmons@mit.edu">Eric Timmons</author>
  <author email="aytonb@mit.edu">Ben Ayton</author>
  <author email="mreeves@mit.edu">Marlyse Reeves</author>
  <author email="zhangyn@mit.edu">Yuening Zhang</author>
  <author email="mohamedm@mit.edu">Mohamed Mohamed</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>slocum_glider_extctl_serial</exec_depend>
  <exec_depend>slocum_glider_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
