<?xml version="1.0"?>
<package format="3">
  <name>slocum_glider_extctl_serial</name>
  <version>0.2.0</version>
  <description>The slocum_glider_extctl_serial package</description>

  <maintainer email="mers-scouts@mit.edu">MIT MERS Scouts Team</maintainer>

  <license>BSD-2</license>

  <author email="etimmons@mit.edu">Eric Timmons</author>
  <author email="aytonb@mit.edu">Ben Ayton</author>
  <author email="mreeves@mit.edu">Marlyse Reeves</author>
  <author email="mohamedm@mit.edu">Mohamed Mohamed</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-serial</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-serial</exec_depend>
  <exec_depend>slocum_glider_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
