<?xml version="1.0"?>
<package format="3">
  <name>slocum_glider_extctl_sim</name>
  <version>0.2.0</version>
  <description>The slocum_glider_extctl_sim package</description>

  <maintainer email="mers-scouts@mit.edu">MIT MERS Scouts Team</maintainer>

  <license>BSD-2</license>

  <author email="etimmons@mit.edu">Eric Timmons</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>slocum_glider_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>frl_vehicle_msgs</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins_msgs</exec_depend>

  <!-- NOTE: Requires at least v1.13 of six, which is not in Bionic's package
       manager -->
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-six</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-six</exec_depend>
  <exec_depend>python-utm-pip</exec_depend>

  <export/>
</package>
