<?xml version="1.0"?>
<package format="2">
  <name>slocum_glider_launch</name>
  <version>0.0.1</version>
  <description>The slocum_glider_launch package</description>

  <maintainer email="mers-scouts@mit.edu">MIT MERS Scouts Team</maintainer>

  <license>BSD-2</license>

  <author email="etimmons@mit.edu">Eric Timmons</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>slocum_glider_backseat</exec_depend>

  <export/>
</package>
