<?xml version="1.0"?>
<package format="2">
  <name>slocum_glider_msgs</name>
  <version>0.0.1</version>
  <description>The slocum_glider_msgs package</description>

  <maintainer email="mers-scouts@mit.edu">MIT MERS Scouts Team</maintainer>

  <license>BSD-2</license>

  <author email="etimmons@mit.edu">Eric Timmons</author>
  <author email="mreeves@mit.edu">Marlyse Reeves</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

</package>
