<?xml version="1.0"?>
<package format="2">
  <name>slocum_glider_serial_interface</name>
  <version>0.0.1</version>
  <description>The slocum_glider_serial_interface package</description>

  <maintainer email="mers-scouts@mit.edu">MIT MERS Scouts Team</maintainer>

  <license>BSD-2</license>

  <author email="etimmons@mit.edu">Eric Timmons</author>
  <author email="aytonb@mit.edu">Ben Ayton</author>
  <author email="mreeves@mit.edu">Marlyse Reeves</author>
  <author email="mohamedm@mit.edu">Mohamed Mohamed</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>slocum_glider_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
