<?xml version="1.0"?>
<package format="2">
  <name>slocum_ros_interface</name>
  <version>0.0.1</version>
  <description>The slocum_ros_interface package</description>

  <maintainer email="etimmons@mit.edu">Eric Timmons</maintainer>

  <license>TODO</license>

  <author email="David.Pingal@Teledyne.com">David Pingal</author>
  <author email="etimmons@mit.edu">Eric Timmons</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>message_runtime</exec_depend>

  <export/>
</package>
